Add requested changes

--- a/configs/createSecret.yml
+++ b/configs/createSecret.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: jone-secret
+  name: jupiterone-integration-secret
 type: Opaque
 data:
   # base64 encoded values
