Load a local K8S config for tests using KUBECONFIG env var.

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "lint": "eslint . --cache --fix --ext .ts,.tsx",
     "format": "prettier --write '**/*.{ts,js,json,css,md,yml}'",
     "type-check": "tsc",
-    "test": "jest",
+    "test": "KUBECONFIG=$(pwd)/test/.kube/config jest",
     "test:ci": "yarn lint && yarn type-check && yarn test",
     "build": "tsc -p tsconfig.dist.json --declaration",
-    "prepush": "yarn lint && yarn type-check && jest --changedSince master",
+    "prepush": "yarn lint && yarn type-check && yarn test --changedSince master",
     "prepack": "yarn build"
   },
   "devDependencies": {
