Various Kubernetes improvements
- Upgrade packages
- Improve Dockerfile
- Rename various config properties

--- a/configs/createSecret.yml
+++ b/configs/createSecret.yml
@@ -4,8 +4,6 @@ metadata:
   name: jupiterone-integration-secret
 type: Opaque
 data:
-  # base64 encoded values
-  # could use better key-names I'm just unsure of guidelines on that at the moment
-  jaccountid: <base64encoded jupiterone account id>
-  japikey: <base64encoded jupiterone api key>
-  integrationid: <base64encoded integration id>
+  jupiteroneAccountId: <base64encoded jupiterone account id>
+  jupiteroneApiKey: <base64encoded jupiterone api key>
+  jupiteroneIntegrationInstanceId: <base64encoded integration id>
