--- a/.dockerignore
+++ b/.dockerignore
@@ -3,3 +3,17 @@ node_modules/
 dist/
 .env
 .eslintcache
+.github/
+configs/
+docs/
+terraform/
+test/
+CHANGELOG.md
+husky.config.js
+jest.config.js
+lint-staged-config.js
+prettier.config.js
+.eslintignore
+.eslintrc
+.gitleaks.yml
+.prettierignore
