--- a/configs/clusterRole.yml
+++ b/configs/clusterRole.yml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     rbac.authorization.kubernetes.io/autoupdate: 'true'
   labels:
-  name: test-read-only
+  name: jupiterone-integration-cluster-readonly
   namespace: default
 rules:
   - apiGroups:
