--- a/configs/clusterRoleBinding.yml
+++ b/configs/clusterRoleBinding.yml
@@ -1,12 +1,12 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: test-binding
+  name: jupiterone-integration-cluster
 subjects:
   - kind: ServiceAccount
-    name: cluster-sa
+    name: jupiterone-integration-cluster
     namespace: default
 roleRef:
   kind: ClusterRole
-  name: test-read-only
+  name: jupiterone-integration-cluster-readonly
   apiGroup: rbac.authorization.k8s.io
