--- a/configs/cronjobCluster.yml
+++ b/configs/cronjobCluster.yml
@@ -5,15 +5,15 @@ metadata:
   labels:
     app: integration-cron
 spec:
-  schedule: "*/60 * * * *" # Schedule to run every 10 minutes
+  schedule: "*/1 * * * *" # Schedule to run every 10 minutes
   jobTemplate:
     spec:
       template:
         spec:
-          serviceAccountName: cluster-sa
+          serviceAccountName: jupiterone-integration-cluster
           containers:
           - name: integration
-            image: my-new-image
+            image: jupiterone-graph-kubernetes
             imagePullPolicy: IfNotPresent
             env:
               # could use better name, but for now:
@@ -28,15 +28,17 @@ spec:
                 valueFrom:
                   secretKeyRef:
                     name: jupiterone-integration-secret
-                    key: jaccountid
+                    key: jupiteroneAccountId
               - name: JUPITERONE_API_KEY
                 valueFrom:
-                  secretKeyRef:jone-secret
+                  secretKeyRef:
                     name: jupiterone-integration-secret
-                    key: japikey
+                    key: jupiteroneApiKey
               - name: INTEGRATION_INSTANCE_ID
                 valueFrom:
                   secretKeyRef:
                     name: jupiterone-integration-secret
-                    key: integrationid
+                    key: jupiteroneIntegrationInstanceId
+              - name: IS_RUNNING_TEST
+                value: 'false'
           restartPolicy: Never
