--- a/configs/cronjobNamespace.yml
+++ b/configs/cronjobNamespace.yml
@@ -10,10 +10,10 @@ spec:
     spec:
       template:
         spec:
-          serviceAccountName: namespace-sa
+          serviceAccountName: jupiterone-integration
           containers:
           - name: integration
-            image: my-new-image
+            image: jupiterone-graph-kubernetes
             imagePullPolicy: IfNotPresent
             env:
               # could use better name, but for now:
@@ -28,15 +28,17 @@ spec:
                 valueFrom:
                   secretKeyRef:
                     name: jupiterone-integration-secret
-                    key: jaccountid
+                    key: jupiteroneAccountId
               - name: JUPITERONE_API_KEY
                 valueFrom:
                   secretKeyRef:
                     name: jupiterone-integration-secret
-                    key: japikey
+                    key: jupiteroneApiKey
               - name: INTEGRATION_INSTANCE_ID
                 valueFrom:
                   secretKeyRef:
                     name: jupiterone-integration-secret
-                    key: integrationid
+                    key: jupiteroneIntegrationInstanceId
+              - name: IS_RUNNING_TEST
+                value: 'false'
           restartPolicy: Never
