--- a/configs/exampleJob.yml
+++ b/configs/exampleJob.yml
@@ -5,10 +5,10 @@ metadata:
 spec:
   template:
     spec:
-      serviceAccountName: cluster-sa
+      serviceAccountName: jupiterone-integration-cluster
       containers:
         - name: integration
-          image: my-new-image
+          image: jupiterone-graph-kubernetes
           imagePullPolicy: IfNotPresent
           env:
             # could use better name, but for now:
@@ -25,16 +25,16 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: jupiterone-integration-secret
-                  key: jaccountid
+                  key: jupiteroneAccountId
             - name: JUPITERONE_API_KEY
               valueFrom:
                 secretKeyRef:
                   name: jupiterone-integration-secret
-                  key: japikey
+                  key: jupiteroneApiKey
             - name: INTEGRATION_INSTANCE_ID
               valueFrom:
                 secretKeyRef:
                   name: jupiterone-integration-secret
-                  key: integrationid
+                  key: jupiteroneIntegrationInstanceId
       restartPolicy: Never
   backoffLimit: 4
