[INT-1356][INT-1357][INT-1358] Add helm chart and documentation

--- a/configs/raw/clusterRole.yml
+++ b/configs/raw/clusterRole.yml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     rbac.authorization.kubernetes.io/autoupdate: 'true'
   labels:
+    name: jupiterone-integration
   name: jupiterone-integration-cluster-readonly
   namespace: default
 rules:
