--- a/configs/raw/createSecret.yml
+++ b/configs/raw/createSecret.yml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
+  labels:
+    name: jupiterone-integration
   name: jupiterone-integration-secret
 type: Opaque
 data:
