--- a/configs/k8s/cronjobCluster.yml
+++ b/configs/k8s/cronjobCluster.yml
@@ -115,7 +115,7 @@ spec:
                   name: kubexit
           containers:
             - name: graph-kubernetes
-              image: graph-kubernetes
+              image: jupiterone/graph-kubernetes:0.3.0
               imagePullPolicy: IfNotPresent
               command: ['/kubexit/kubexit', 'yarn']
               args: ['collect']
