--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ tilt_modules/
 .env
 .eslintcache
 tsconfig.tsbuildinfo
+.terraform/
+.terraform.lock.hcl
+.terraform.tfstate.lock.info
+terraform.tfstate.backup
+terraform.tfstate
