--- a/tilt.yml
+++ b/tilt.yml
@@ -158,7 +158,7 @@ items:
         backoffLimit: 4
         initContainers:
           - name: kubexit
-            image: karlkfi/kubexit:latest
+            image: cortexlabs/kubexit:0.40.0
             command: ['cp']
             args: ['/bin/kubexit', '/kubexit/kubexit']
             volumeMounts:
