--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@jupiterone/integration-sdk-core": "^7.4.0",
     "@jupiterone/integration-sdk-dev-tools": "^7.4.0",
-    "@kubernetes/client-node": "^0.14.3"
+    "@kubernetes/client-node": "^0.14.3",
+    "node-fetch": "2.6.1"
   }
 }
