Initial local testing improvements

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-jupiteroneAccountId=j1dev
-jupiteroneApiKey=some-jupiterone-api-key
-jupiteroneIntegrationInstanceId=some-integration-instance-id
+ACCESS_TYPE="cluster"
+NAMESPACE="default"
+JUPITERONE_ACCOUNT_ID="abc"
+JUPITERONE_API_KEY="abc"
+INTEGRATION_INSTANCE_ID="abc"
+LOAD_KUBERNETES_CONFIG_FROM_DEFAULT=true
