--- a/tilt.yml
+++ b/tilt.yml
@@ -191,7 +191,7 @@ items:
                 value: 'cluster'
               - name: NAMESPACE
                 value: 'default'
-              - name: IS_RUNNING_TEST
+              - name: LOAD_KUBERNETES_CONFIG_FROM_DEFAULT
                 value: 'false'
               - name: JUPITERONE_ACCOUNT_ID
                 valueFrom:
