--- a/configs/k8s/cronjobNamespace.yml
+++ b/configs/k8s/cronjobNamespace.yml
@@ -118,7 +118,7 @@ spec:
               image: jupiterone/graph-kubernetes:0.7.0
               imagePullPolicy: IfNotPresent
               command: ['/kubexit/kubexit', 'yarn']
-              args: ['collect']
+              args: ['execute']
               env:
                 - name: KUBEXIT_NAME
                   value: graph-kubernetes
