use org publish image workflow
update

use secrets properly

use bool

change target

use ubuntu-latest

doubt this fixes it

busted bools

toggle publish

target .github repo

retry

use default value for runs-on

use new default for push-image

use action v1.0.0

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,3 +77,11 @@ jobs:
           echo "//registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}" > .npmrc
           yarn
           npm publish
+    
+  publish-image:
+    uses: jupiterone/.github/.github/workflows/publish_integration_docker_image.yaml@v1.0.0
+    with:
+      package-name: 'jupiterone/graph-kubernetes'
+    secrets:
+      DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
