--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,6 +79,7 @@ jobs:
           npm publish
     
   publish-image:
+    if: ${{github.event_name != 'pull_request'}}
     uses: jupiterone/.github/.github/workflows/publish_integration_docker_image.yaml@v1.0.0
     with:
       package-name: 'jupiterone/graph-kubernetes'
