--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@jupiterone/graph-kubernetes",
   "version": "1.1.0",
   "description": "A JupiterOne Integration for Kubernetes",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JupiterOne/graph-kubernetes"
+  },
   "license": "MPL-2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
