--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "prepack": "yarn build"
   },
   "devDependencies": {
-    "@jupiterone/integration-sdk-testing": "^8.22.6"
+    "@jupiterone/integration-sdk-testing": "^8.22.6",
+    "@types/node": "^20.11.0"
   },
   "dependencies": {
     "@jupiterone/integration-sdk-dev-tools": "^8.22.6",
-    "@kubernetes/client-node": "^0.14.3",
+    "@kubernetes/client-node": "^0.20.0",
     "node-fetch": "2.6.1"
   },
   "peerDependencies": {
