--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
     "prepack": "yarn build"
   },
   "devDependencies": {
-    "@jupiterone/integration-sdk-testing": "^12.0.0",
+    "@jupiterone/integration-sdk-cli": "12.4.1",
+    "@jupiterone/integration-sdk-dev-tools": "12.4.1",
+    "@jupiterone/integration-sdk-testing": "12.4.1",
     "@types/node": "^20.11.0"
   },
   "dependencies": {
-    "@jupiterone/integration-sdk-dev-tools": "^12.0.0",
     "@kubernetes/client-node": "^0.20.0",
-    "latest": "^0.2.0",
     "node-fetch": "2.6.1"
   },
   "peerDependencies": {
-    "@jupiterone/integration-sdk-core": "^12.8.3"
+    "@jupiterone/integration-sdk-core": "^12.4.1"
   }
 }
